--- a/continuation/ling.cabal
+++ b/continuation/ling.cabal
@@ -17,7 +17,7 @@ executable ling
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
-  other-modules: Lang, Types
+  other-modules: Lang, Types, Examples
   build-depends:       base >= 4.7 && < 5,
                        parameterized-utils,
                        mtl
